# deep-reinforcement-learning-for-robot

./: README.md
robotic_manipulation_project/: package.xml  setup.py
robotic_manipulation_project/config/: controllers.yaml
robotic_manipulation_project/launch/: start_simulation.launch.py
robotic_manipulation_project/src/perception/: package.xml  setup.py
robotic_manipulation_project/src/perception/perception/: cnn_model.py
robotic_manipulation_project/src/rl_agent/: package.xml  setup.py
robotic_manipulation_project/src/rl_agent/rl_agent/: agent.py  models.py
robotic_manipulation_project/src/ros_nodes/: package.xml  setup.cfg  setup.py
robotic_manipulation_project/src/ros_nodes/ros_nodes/: agent_node.py  perception_node.py
robotic_manipulation_project/urdf/: robot.urdf.xacro
